Sat Feb 26 2005  Joe Allen <jhallen@world.std.com>

	Allow '-' in file names in compiler error parser.

Sat Feb 26 2005  Joe Allen <jhallen@world.std.com>

	Accept patch from Kalan (thearinkalen at users.sourceforge.net)
	which makes save block prompt if a file is to be overwritten.

	Accept patch from sth2000 at users.sourceforge.net which improves
	wordwrap when overtype mode is enabled.

Fri Feb 25 2005  Joe Allen <jhallen@world.std.com>

	Fix bash highlighter bug: $"  " and $'  ' are strings.
	Ctrl-G starts a search if it doesn't know word under cursor.

Sun Feb 20 2005  Joe Allen <jhallen@world.std.com>

	Fix perl highlighter bug: \"fdfdg" is a string.

Sun Feb 20 2005  Joe Allen <jhallen@world.std.com>

	Greatly enhanced ^G (goto matching delimiter) so that it understands
	quoting and comments and can operate on word delimiters
	(begin...end).

Sun Feb 20 2005  Joe Allen <jhallen@world.std.com>

	Fix perl highlighter bug: words ending in q
	got confused with 'q'.

Wed Jan 19 2005  Joe Allen <jhallen@world.std.com>

	New Pascal highlighter for Delphi and FPC

Mon Dec 13 2004  Joe Allen <jhallen@world.std.com>

	Accept SML syntax file.

Mon Nov 29 2004  Joe Allen <jhallen@world.std.com>

	Accept OCaml and 4GL syntax files.

        Accept UTF-8 in help file patch.  Help text is now
        UTF-8.

Mon Aug  9 2004  Joe Allen <jhallen@world.std.com>

	Fix bug in joe_state code: buffer was not
	large enough.


Thu Jul  8 2004  Joe Allen <jhallen@world.std.com>

	Merge last two changes (described below...)


Tue Jul  6 2004  Pavel Fedin <sonimiga@rambler.ru>

     Changed some fork()s to vfork()s.
	Added ^# (CSI = 0x9B) control character.
	Added Amiga CSI sequences to keys definitions in joerc files.
	Added some #ifdef's to compile properly on AmigaOS.

Tue Jun 22 2004  Joe Allen <jhallen@world.std.com>

	~/.joe_state file:

	Saves macros, yanks records, and file name history in a file.

Mon Jun  7 2004  Joe Allen <jhallen@world.std.com>
