@@ -41,6 +41,7 @@
   *   id_block
   "a-zA-Z"  tag_block recolor=-1
   "." class_block recolor=-1
+  "#" id_block  recolor=-1
   "{" style_block recelor=-1
    
 :class_block  Class
